[package]
name = "ws-worker"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.45"
base64 = "0.13.0"
once_cell = "1.5.1"
wasm-bindgen-futures = "0.4.18"
spinning_top = "0.2.2"

[dependencies.web-sys]
version = "0.3.45"
features = [
    "Worker",
]

[workspace]
members = [
    "examples/add"
]
