[package]
name = "add"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
futures = "0.3.8"
wasm-bindgen = "0.2.68"
wasm-bindgen-futures = "0.4.18"
web-sys = { version = "0.3.45", features = ["console"] }
ws-worker = { path = "../.." }

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
